# ESP32_aircon_ir_remote

./: Makefile  codes.txt  sdkconfig  sdkconfig.defaults
components/ir_protocol/include/: app_ir_tasks.h  ir_timings.h  ir_tools.h
components/ir_protocol/src/: app_ir_tasks.c  ir_builder_rmt_samsung.c  ir_parser_rmt_samsung.c
components/wifi/include/: app_wifi.h
components/wifi/src/: app_wifi.c
main/: CMakeLists.txt  ac_common.h  main.c  main.h
